# autocrop-flet-watchdog

./: .gitignore  AutoCrop_App_Creation_Manual.md  MENU_MANUAL.md  PICO_LED_WIRING.md  README.md  _main.py  app_launcher.py  autocrop.py  barcode_reader.py  barcode_test.py  build_autocrop_app.bat  camera.py  config.py  flet app 作成手順.txt  flet_config.py  gphoto2.py  gridviewtest.py  gui.py  image_processing.py  imgtest.py  install_hooks.bat  item_db.py  jtext.py  main.py  mainview.py  monitor_process.py  pico_connection_check.py  pico_led.py  pico_led_blink.py  pico_serial_led.py  pico_test_sender.py  process_image.py  product_data.db  pyproject.toml  requirements.txt  run_autocrop.bat  settings.json  sidebar.py  update_version.py  viewer.py  (+5 more)
AutoCrop_Portable/: README.md  item_db.py  jtext.py  requirements.txt  sample.py  setup.py  watchdog_process.py
_sub/: sql.py
githooks/: prepare-commit-msg
