[project]
name = "autocrop-flet-watchdog"
version = "1.1.10"
description = "商品撮影システム - フォルダ監視による自動画像処理アプリケーション"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.11.0",
    "certifi==2025.10.5",
    "flet==0.28.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "numpy==2.2.6",
    "oauthlib==3.3.1",
    "opencv-python==4.12.0.88",
    "pyinstaller==6.16.0",
    "repath==0.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "watchdog==6.0.0",
]
